[package]
name = "DeepMines"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.2.0"
bevy = {version ="0.15.1", features = ["dynamic_linking","bevy_gltf","webgl2","png"]}
bevy-tnua = "0.21.0"
bevy-tnua-avian2d = "0.2.0"
# bevy_ecs_ldtk = "0.11.0"
bevy_ecs_tilemap = {version = "0.15.0", features = ["atlas","render"]}

